--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -25,8 +25,12 @@ jobs:
             dist/github-snake-dark.svg?palette=github-dark
             dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
 
-      - name: Upload Snake Animation
-        uses: actions/upload-artifact@v3
-        with:
-          name: snake-artifacts
-          path: dist/
+      - name: Commit and push Snake Animation
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          mkdir -p assets
+          cp dist/* assets/
+          git add assets/
+          git commit -m "Updated Snake animation"
+          git push origin main
